--- a/Community/src/main/resources/application.properties
+++ b/Community/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/doorscholar
+spring.datasource.url=jdbc:mysql://localhost:3306/testcreate?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=V(aWJBGuo0fa
+spring.datasource.password=120329
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
