--- a/Community/src/main/resources/application.properties
+++ b/Community/src/main/resources/application.properties
@@ -1,4 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/testcreate?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://121.36.60.6:3306/doorscholar?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=120329
+spring.datasource.password=V(aWJBGuo0fa
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.database=mysql
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
