--- a/Community/src/main/resources/application.yml
+++ b/Community/src/main/resources/application.yml
@@ -5,11 +5,12 @@
 #  datasource:
 #    username: root
 #    password: V(aWJBGuo0fa
-#    url: jdbc:mysql://localhost:3306/
+#    url: jdbc:mysql://121.36.60.6:3306/doorscholar?useUnicode=true&characterEncoding=utf-8
 #  jpa:
 #    database-platform: org.hibernate.dialect.MySQL5Dialect
 #    hibernate:
 #      ddl-auto: update
+#    show-sql: true
 #
 ##mybatis:
 ##  type-aliases-package: src/main/java/Entity
