--- a/Community/src/main/resources/application.properties
+++ b/Community/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.jpa.database=mysql
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
