--- a/Community/src/main/resources/application.properties
+++ b/Community/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.data.elasticsearch.repositories.enabled=true
+spring.elasticsearch.uris=121.36.60.6:9200
+spring.elasticsearch.username=root
+spring.elasticsearch.password=Doorscholar123456
