--- a/Community/src/main/resources/application.properties
+++ b/Community/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.data.elasticsearch.repositories.enabled=true
 spring.elasticsearch.uris=121.36.60.6:9200
 spring.elasticsearch.username=root
 spring.elasticsearch.password=Doorscholar123456
+server.port=8083
