--- a/Literature/src/main/resources/application.properties
+++ b/Literature/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-
+spring.datasource.url=jdbc:mysql://121.36.60.6:3306/doorscholar?useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=V(aWJBGuo0fa
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.database=mysql
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.data.elasticsearch.repositories.enabled=true
+spring.elasticsearch.uris=121.36.60.6:9200
+spring.elasticsearch.username=root
+spring.elasticsearch.password=Doorscholar123456
+server.port=8081
