yet to test, maybe some properties setted incorrectly

--- a/Portal/src/main/resources/application.properties
+++ b/Portal/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 
+server.port = 8081
+
+# email
+mail.host = smtp.163.com
+mail.protocol = smtp
+mail.default-encoding = UTF-8
+mail.username = firstflight@163.com
+mail.password = SFMOOBZVMGGCGBIF
+mail.test-connection = true
+mail.properties.mail.smtp.auth = true
+mail.properties.mail.smtp.starttls.enable = true
+mail.properties.mail.smtp.starttls.required = true
+
+# session
+session.store-type = redis
+session.timeout = PT5M
+
+# es
+spring.data.elasticsearch.cluster-nodes = 121.36.60.6:9300
