--- a/Portal/src/main/resources/application.properties
+++ b/Portal/src/main/resources/application.properties
@@ -17,4 +17,15 @@ session.store-type = redis
 session.timeout = PT5M
 
 # es
-spring.data.elasticsearch.cluster-nodes = 121.36.60.6:9300
+spring.data.elasticsearch.cluster-nodes = 121.36.60.6:9200
+spring.elasticsearch.rest.uris = 121.36.60.6:9200
+spring.data.elasticsearch.repositories.enabled = true
+spring.elasticsearch.uris = 121.36.60.6:9200
+spring.elasticsearch.username = root
+spring.elasticsearch.password = Doorscholar123456
+
+# mysql
+spring.datasource.url = jdbc:mysql://121.36.60.6:3306/doorscholar
+spring.datasource.username = root
+spring.datasource.password = V(aWJBGuo0fa
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
