--- a/Portal/src/main/resources/application.properties
+++ b/Portal/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.elasticsearch.username = root
 spring.elasticsearch.password = Doorscholar123456
 
 # mysql
-spring.datasource.url = jdbc:mysql://121.36.60.6:3306/doorscholar
+spring.datasource.url = jdbc:mysql://121.36.60.6:3306/doorscholar?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = V(aWJBGuo0fa
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
