--- a/Literature/src/main/resources/application.properties
+++ b/Literature/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.elasticsearch.uris=121.36.60.6:9200
 spring.elasticsearch.username=root
 spring.elasticsearch.password=Doorscholar123456
 server.port=8081
+spring.redis.host=localhost
+spring.redis.port=6379
