--- a/Portal/src/main/resources/application.properties
+++ b/Portal/src/main/resources/application.properties
@@ -2,15 +2,17 @@
 server.port = 8081
 
 # email
-mail.host = smtp.163.com
-mail.protocol = smtp
-mail.default-encoding = UTF-8
-mail.username = firstflight@163.com
-mail.password = SFMOOBZVMGGCGBIF
-mail.test-connection = true
-mail.properties.mail.smtp.auth = true
-mail.properties.mail.smtp.starttls.enable = true
-mail.properties.mail.smtp.starttls.required = true
+spring.mail.host = smtp.163.com
+spring.mail.protocol = smtp
+spring.mail.default-encoding = UTF-8
+spring.mail.username = firstflight@163.com
+spring.mail.password = SFMOOBZVMGGCGBIF
+spring.mail.test-connection = true
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.starttls.required = true
+spring.mail.properties.mail.smtp.debug = true
+
 
 # session
 session.store-type = redis
@@ -29,3 +31,9 @@ spring.datasource.url = jdbc:mysql://121.36.60.6:3306/doorscholar?useUnicode=tru
 spring.datasource.username = root
 spring.datasource.password = V(aWJBGuo0fa
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+
+# jpa
+spring.jpa.database = mysql
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
