--- a/Literature/pom.xml
+++ b/Literature/pom.xml
@@ -61,6 +61,18 @@
             <artifactId>spring-session-data-redis</artifactId>
             <version>2.4.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-client</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
