--- a/Management/src/main/resources/application.properties
+++ b/Management/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.elasticsearch.password=Doorscholar123456
 server.port=8083
 spring.redis.host=localhost
 spring.redis.port=6379
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.example.management.Entity
