--- a/Portal/src/main/resources/application.properties
+++ b/Portal/src/main/resources/application.properties
@@ -37,3 +37,7 @@ spring.jpa.database = mysql
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# redis
+spring.redis.host=localhost
+spring.redis.port=6379
