--- a/Portal/src/main/resources/application.properties
+++ b/Portal/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+# basic
 server.port = 8081
 
 # email
@@ -12,8 +12,7 @@ spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
 spring.mail.properties.mail.smtp.starttls.required = true
 spring.mail.properties.mail.smtp.debug = true
-
-
+        
 # session
 session.store-type = redis
 session.timeout = PT5M
@@ -39,5 +38,5 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # redis
-spring.redis.host=localhost
-spring.redis.port=6379
+spring.redis.host = localhost
+spring.redis.port = 6379
