--- a/Management/src/main/resources/application.properties
+++ b/Management/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://121.36.60.6:3306/doorscholar?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://121.36.60.6:3306/doorscholar?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=V(aWJBGuo0fa
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
